--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # menu
 menu:
-  home: .
-  archives: archives  # 归档
+  Home: .
+  Archives: archives  # 归档
   # Categories: categories  # 分类
   # Tags: tags  # 标签
   # Repository: repository  # github repositories
